<resources>
    <string name="app_name">SiViSo Map Schedule</string>
    <string name="title_home">SiViSo Map Schedule</string>
    <string name="title_add_location">Add Location</string>
    <string name="title_edit_location">Edit Location</string>
    <string name="text_for_add_location_button">+</string>
    <string name="text_for_cancel_button">Cancel</string>
    <string name="text_for_add_button">Add</string>
    <string name="text_for_confirm_edit_button">Confirm</string>
    <string name="text_for_delete_button">Delete</string>
    <string name="text_for_edit_button">Edit</string>
    <string name="text_for_onOff_switch">On/Off</string>
    <string name="text_for_hint_name">Name</string>
    <string name="text_for_hint_address">Location</string>
    <string name="name_for_default_location">Default</string>
</resources>
